syntax = "proto3";

package hello.v1;

// Simple hello service for testing single-port mode
service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
